ikos_reports/battery_20260106_132327_analysis.txt
[*] Compiling /src/analysis/battery_test.c
In file included from /src/analysis/battery_test.c:3:
/src/analysis/pico_stubs.h:267:17: error: typedef redefinition with different types ('int64_t' (aka 'long') vs 'struct absolute_time_t')
typedef int64_t absolute_time_t;
                ^
/src/analysis/pico_stubs.h:27:31: note: previous definition is here
typedef struct { int dummy; } absolute_time_t;
                              ^
/src/analysis/pico_stubs.h:271:12: error: returning 'int' from a function with incompatible result type 'absolute_time_t'
    return 0;
           ^
2 errors generated.
ikos: error while compiling /src/analysis/battery_test.c, abort.
